make reservation logic refactored schema on entities changed altered app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=megalopolis5
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # ===============================
 #LOGGING
 # ===============================
@@ -20,5 +22,3 @@ logging.level.com.mnocompany.gos.audiovisualworks.controllers=info
 logging.level.com.mnocompany.gos.audiovisualworks.repositories=info
 logging.level.org.hibernate=error
 logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=error
-
-
