--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,19 +6,17 @@ spring.datasource.username=root
 spring.datasource.password=megalopolis5
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# ===============================
-#LOGGING
-# ===============================
 logging.logback.rollingpolicy.max-file-size=20MB
 logging.logback.rollingpolicy.total-size-cap=5GB
 
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.springframework.security=warn
 logging.level.com.mnocompany.gos.audiovisualworks=debug
 logging.level.com.mnocompany.gos.audiovisualworks.controllers=info
 logging.level.com.mnocompany.gos.audiovisualworks.repositories=info
-logging.level.org.hibernate=error
+logging.level.org.hibernate=ERROR
 logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=error
